# sonic-platformer

./: .gitignore  Cargo.toml  README.md
.github/actions-rs/: grcov.yml
.github/workflows/: codecov.yml  release.yml  test.yml
mapgen/: Cargo.toml
mapgen/src/: main.rs
resources/levels/00/: 128x128.json  128x128.toml  16x16.json  16x16.toml  level.json  level.toml  map.json
resources/levels/R0/: 128x128.json  16x16.json  design.xcf  level.json  map.json
resources/levels/R1/: 16x16.json  map.json
resources/levels/R1/dev/: credit.txt
src/: input.rs  lib.rs  lvledit.rs  main.rs  resources.rs
src/draw_states/: navigation.rs
src/draw_systems/: mod.rs  titlescreen_draw_system.rs
src/level_editor/: mod.rs  navigation.rs
src/level_editor/editors/: chunk_editor.rs  editor.rs  mod.rs  piece_editor.rs  tile_viewer.rs
src/objects/: animation.rs  camera.rs  general.rs  mod.rs  player.rs  sprite_atlas.rs  sprite_sheet.rs  tile_marker.rs
src/objects/level/: map.rs  mod.rs  tile128.rs  tile16.rs
src/objects/player/: animation.rs  constants.rs  general.rs  mod.rs  physics.rs  sensors.rs  state.rs
src/screen_systems/: mod.rs  navigation.rs  titlescreen_system.rs
src/screen_systems/levelscreen/: system.rs
src/screen_systems/titlescreen/: mod.rs  objects.rs  system.rs
src/systems/: assets.rs
