[package]
name = "sonic-platformer"
authors = ["Lucas Vieira <lucasvieira@protonmail.com>"]
version = "0.0.4"
edition = "2018"
default-run = "game"
autobins = false

[workspace]
members = [
    "mapgen",
]

[lib]
name = "sonic_platformer"
path = "src/lib.rs"

[[bin]]
name = "game"
path = "src/main.rs"

[[bin]]
name = "lvledit"
path = "src/lvledit.rs"

[dependencies]
ggez = "0.6.1"
glam = {version = "0.19.0", features = ["mint"]}
mint = "0.5"
legion = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

